app/styles.css
.hakapit {
  --color-primary: 350, 85%, 25%;
  --color-primary-opaque: 350 85% 42% / 0.2;
  --color-secondary: 177, 100%, 34.9%;
  --color-accent: 55.6, 89.2%, 67.3%;
  --color-background: 350 85% 20%;
  --color-text: 0 0% 100%;
}

.nitk {
  --color-primary: 296, 100%, 11.8%;
  --color-primary-opaque: 296 100% 20% / 0.3;
  --color-secondary: 338.9, 100%, 45.7%;
  --color-text: 182.4, 100%, 50.8%;
  --color-background: 296, 100%, 20%;
  --color-accent: 151.3, 100%, 50%;
}

.balcony-albums {
  --color-primary: 359.5, 44%, 49%;
  --color-primary-opaque: 270 31% 39% / 0.3;
  --color-secondary: 0, 0%, 0%;
  --color-accent: 205, 51.1%, 55.9%;
  --color-background: 270, 31%, 20%;
  --color-text: 44.3, 46.9%, 90.4%;
}

.page {
  width: auto;
  direction: rtl;
  background-color: var(--color-background);
}

body {
  transition:
    all 0.2s ease-in-out,
    background 0.2s ease-in-out;
}

:root {
  --color-primary: 350, 85%, 25%;
  --color-primary-opaque: 350 85% 42% / 0.2;
  --color-secondary: 177, 100%, 34.9%;
  --color-accent: 55.6, 89.2%, 67.3%;
  --color-background: 351, 77%, 5%;
  --color-text: 0, 0%, 100%;
  --color-muted: 0, 0%, 50%;
  --background: 0 0% 100%;
  --foreground: 222.2 84% 4.9%;

  --card: 0 0% 100%;
  --card-foreground: 222.2 84% 4.9%;

  --popover: 0 0% 100%;
  --popover-foreground: 222.2 84% 4.9%;

  --primary: 222.2 47.4% 11.2%;
  --primary-foreground: 210 40% 98%;

  --secondary: 210 40% 96.1%;
  --secondary-foreground: 222.2 47.4% 11.2%;

  --muted: 210 40% 96.1%;
  --muted-foreground: 215.4 16.3% 46.9%;

  --accent: 210 40% 96.1%;
  --accent-foreground: 222.2 47.4% 11.2%;

  --destructive: 0 84.2% 60.2%;
  --destructive-foreground: 210 40% 98%;

  --border: 214.3 31.8% 91.4%;
  --input: 214.3 31.8% 91.4%;
  --ring: 222.2 84% 4.9%;

  --radius: 0.5rem;
}

.dark {
  --background: 222.2 84% 4.9%;
  --foreground: 210 40% 98%;

  --card: 222.2 84% 4.9%;
  --card-foreground: 210 40% 98%;

  --popover: 222.2 84% 4.9%;
  --popover-foreground: 210 40% 98%;

  --primary: 210 40% 98%;
  --primary-foreground: 222.2 47.4% 11.2%;

  --secondary: 217.2 32.6% 17.5%;
  --secondary-foreground: 210 40% 98%;

  --muted: 217.2 32.6% 17.5%;
  --muted-foreground: 215 20.2% 65.1%;

  --accent: 217.2 32.6% 17.5%;
  --accent-foreground: 210 40% 98%;

  --destructive: 0 62.8% 30.6%;
  --destructive-foreground: 210 40% 98%;

  --border: 217.2 32.6% 17.5%;
  --input: 217.2 32.6% 17.5%;
  --ring: 212.7 26.8% 83.9%;
}

.ltr {
  direction: ltr;
}

.body {
  @apply bg-background text-paragraph grid min-h-screen gap-5;
  direction: rtl;
  grid-template-rows: auto 1fr;
}

.main-content {
  @apply lg:px-8 w-screen p-4 overflow-auto;
}

.content {
  @apply lg:max-w-7xl flex flex-col gap-5 m-auto;
}

.footer {
  @apply bg-primary-opaque flex flex-wrap items-center justify-center;
}

.feed-page {
  @apply place-content-center lg:flex-row flex flex-col flex-wrap w-full gap-6;
}

.card-content>* {
  @apply text-ellipsis overflow-hidden;
}

.masonry {
  @apply grid w-full gap-8;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-auto-rows: minmax(200px, auto);
}

.grid-col-responsive {
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.feed-page .timeline {
  @apply lg:block hidden;
}

.full-page-episode {
  @apply w-full px-8 py-10 overflow-auto;
}

.episode-card {
  @apply flex flex-col border-none;
  background: linear-gradient(to bottom,
      rgba(0, 0, 0, 0.2) 0%,
      rgba(0, 0, 0, 1) 100%);
}

.game-title {
  @apply grid items-center gap-5;
  grid-template-columns: 1fr auto 1fr;
}

.audio {
  @apply w-full rounded-none;
}

audio.audio::-webkit-media-controls-panel {
  color-scheme: dark;
  background-color: hsl(var(--color-primary));
}

audio::-webkit-media-controls-enclosure {
  border-radius: 0;
}

audio.audio::-webkit-media-controls-current-time-display,
audio.audio::-webkit-media-controls-time-remaining-display {
  color: hsl(var(--color-accent));
}

audio.audio::-webkit-media-controls-timeline-container {
  background-color: hsl(var(--color-accent));
}

.header {

  @apply border-accent bg-primary text-paragraph sticky top-0 z-10 w-screen border-b-2 border-solid;
}

.header:has(.menu-button:focus-within) .header-links {
  @apply show-menu;
}

.header:has(.menu-button:not(:focus-within)) .grid-transition {
  transition-delay: 1s;
}

.hide-menu {
  grid-template-rows: 0fr;
}

.show-menu {
  grid-template-rows: 1fr;
}

.header-title {
  font-size: clamp(1.5em, 15vw, 2.5em);
  line-height: 3rem;
}

.grid-transition {
  transition: grid-template-rows 1s;

}

.header-image {
  @apply relative w-12 h-12;
}

.info {
  font-size: clamp(1em, 5vw, 2em);
}

.crazy-font {
  font-size: clamp(1em, 7vw, 2em);
}

.big-title {
  font-size: clamp(1em, 12vw, 3em);
}

.timeline {
  width: auto;
  padding: 1rem;
  width: 30rem;
  align-self: flex-start;
}

.twitter-timeline {
  background-color: rgba(0, 0, 0, 0.2);
  border-radius: 1rem;
  overflow: hidden;
}

.clamp-text {
  font-size: clamp(0.5em, 2.5vw, 1em);
}

.what-is-kapit>p {
  font-size: clamp(0.5em, 2.5vw, 1em);
  line-height: 2rem;
  @apply text-xl;
}

.fade-in-bottom {
  opacity: 0;
  animation: fadeIn 1s ease-in-out both;
}

.fade-in-bottom.a-delay-100 {
  animation-delay: 0.1s;
}

.fade-in-bottom.a-delay-200 {
  animation-delay: 0.2s;
}

.fade-in-bottom.a-delay-300 {
  animation-delay: 0.3s;
}

.fade-in-bottom.a-delay-400 {
  animation-delay: 0.4s;
}

.fade-in-bottom.a-delay-500 {
  animation-delay: 0.5s;
}

.fade-in-bottom.a-delay-600 {
  animation-delay: 0.6s;
}

.fade-in-bottom.a-delay-700 {
  animation-delay: 0.7s;
}

.about {
  min-height: calc(100dvh - 188px);
}

.go-crazy-animation {
  animation: changeColors 2s ease-in-out infinite;
}

.faded-image {
  --percentage: 0.1%;
  --direction: right;
  -webkit-mask-image: linear-gradient(to var(--direction),
      transparent var(--percentage),
      black);
  mask-image: linear-gradient(to var(--direction),
      transparent var(--percentage),
      black);
}

.faded-image-vertical {
  --percentage: 30%;
  --direction: top;
  -webkit-mask-image: linear-gradient(to var(--direction),
      transparent var(--percentage),
      black);
  mask-image: linear-gradient(to var(--direction),
      transparent var(--percentage),
      black);
}

.no-mask {
  -webkit-mask-image: none;
  mask-image: none;
}

.full-bleed {
  box-shadow: 0 0 0 100vw hsl(var(--color-primary));
  clip-path: inset(0 -100vmax);
}


@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(20px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes changeColors {
  0% {
    filter: sepia(0%) grayscale(0%);
  }

  50% {
    filter: sepia(50%) grayscale(50%);
  }

  100% {
    filter: grayscale(80%) sepia(80%);
  }
}

